# Beizbol.github.io

./: CNAME  README.md  README.txt  dad-site.lnk  index.html  robots.txt  sitemap.xml
assets/: 0fb2d2d6.6d63bfd8.css  1e1c7537.bdea2f64.css  7de03930.eea485dc.css  8b9cd836.89838b5a.css  93416119.f1e67c3a.css  asset.04ba399e.css  asset.2525f2e8.css  asset.56ea0d87.css  asset.61a981da.css  asset.7804f8f1.css  asset.8eab2b1e.css  asset.9aaf7295.css  asset.a3258207.css  asset.ac3b3a6e.css  asset.f18ccc91.css
contact/: index.html
docs/: 404.html  hoisted.bc03f5622.js  hoisted.d31d934f.js  index.2051b403.css  index.229cfb4f.css  index.270ed842.css  index.976757e1.css  index.b51e2857.css  index.eaf2edde.css  index.eeff33a0.css  index.html  manifest.webmanifest  manifest_8HLdyG-o.mjs  mom.8cb78191.css  robots.txt  sitemap-0.xml  sitemap-index.xml  sw.js  wordle.20d11612.css
games/: index.html
j-wordle/: Cargo.toml  index.html  manifest.json
jake-astro-site/: .gitignore  README.md  astro.config.mjs  content.config.ts  package-lock.json  package.json  strap  tsconfig.json
jakesite/: package-lock.json  package.json  post.js  pre.js
jakesite-prev/: astro.config.mjs  package-lock.json  post.js
jdo/: Cargo.toml  LICENSE-MIT  README.md  index.html
jdo/src/: main.rs
jpipe/: go.mod  go.sum  jmin.go  main.go
jprof/: .gitignore  build.zig  build.zig.zon  go.mod  hello.py  main.go  main.js  main.mjs  main.py  main.zig  package-lock.json  package.json
js-picture-puzzle-main/: index.html  puzzle.html
jserver/: go.mod  main.go
paudle-main/: package-lock.json  (+1 more)
(+1192 files in other folders)
