[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.8.0"
serde = "1.0.140"
serde_derive = "1.0.140"
strum = "0.24.1"
strum_macros = "0.24.2"
yew = "0.19"
[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
